--- a/chapter8.tex
+++ b/chapter8.tex
@@ -72,7 +72,7 @@ HistGradientBoostingRegressor without imputation achieves overall the lowest \gl
 
 % Hypotheses: closer neighbours have a higher influence on the temperature
 The goal with hyperlocal temperature mapping is to get a deep insight into very local climatic conditions. If two sensors are located in the same climatic conditions, in an extreme case directly situated next to each other, both sensors should measure the same temperature. Therefore, the hypothesis is, that closer stations have a higher influence on the prediction quality, e.g., if closer stations are chosen as neighbours the prediction quality is better compared than if the same number of neighbours is chosen but further away. We investigate this hypotheses by comparing the \gls{rmse} of prediction quality for different distances between neighbours. Because there are not so many stations available for Hamburg, that for example 10 stations could be selected in a 500m radius, we look at the minimum distance instead and remove neighbours that are to close to the station.\\
-The evaluation is done using 5-fold cross validation for a subset of 10 stations in Hamburg, spread across a bigger area so we can cover different distances between neighbours and different climatic conditions, e.g., distance to water, situated in the city centre etc. The list of stations can be found in Appendix~\ref{appendix stations for minimum distance between stations}. The number of neighbours was set to 10 as this number was the number at which Gradient Boosting outperformed other models. Figure~\ref{fig:eval hamburg minimum distance between stations} shows the \gls{rmse} for different minimum distances between stations in km for 10 stations from Netatmo in Hamburg with 10 neighbours. We can see that the \gls{rmse} is increasing minimally across the first few kilometres and then starts to sharply increase with greater distances over 10km. However, if we take a look at Figure~\ref{fig:eval hamburg minimum distance between stations by station id} which shows the same data but grouped by station id, we can see that there are several stations whose \gls{rmse} does not increase with greater distances.\\ % Todo: why?
+The evaluation is done using 5-fold cross validation for a subset of 10 stations in Hamburg, spread across a bigger area so we can cover different distances between neighbours and different climatic conditions, e.g., distance to water, situated in the city centre etc. The list of stations can be found in Appendix~\ref{appendix stations for minimum distance between stations}. The number of neighbours was set to 10 as this number was the number at which Gradient Boosting outperformed other models. Figure~\ref{fig:eval hamburg minimum distance between stations} shows the \gls{rmse} for different minimum distances between stations in km for 10 stations from Netatmo in Hamburg with 10 neighbours. We can see that the \gls{rmse} is increasing minimally across the first few kilometres and then starts to sharply increase with greater distances over 10km. However, if we take a look at Figure~\ref{fig:eval hamburg minimum distance between stations by station id} which shows the same data but grouped by station id, we can see that there are several stations whose \gls{rmse} does not increase with greater distances.\\
 
 \subsubsection{Feature Importance}
 
